alignment and padding issues fixed. normalized headings

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -88,19 +88,13 @@ ul.navbar li.nav-item {
 	display: none;
 }
 /* Location */
-#location {
-	background: var(--main-white);
-}
+
 #address {
 	margin-top: 11rem;
 }
 
 #location p {
 	margin-bottom: 0;
-}
-
-#location h4 {
-	font-size: 2.8rem;
 }
 
 iframe {
@@ -134,6 +128,10 @@ iframe {
 	iframe {
 		width: 700px;
 		margin-top: 1rem;
+	}
+
+	.contact-section {
+		margin-top: 2vh;
 	}
 }
 @media only screen and (max-width: 570px) {
